compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_function.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub fn main() {\n  one.two\n}"
---
----- SOURCE CODE
-- one.gleam
fn two() { 2 }

-- main.gleam
import one

pub fn main() {
  one.two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:4:7
  │
4 │   one.two
  │       ^^^

The module `one` does not have a `two` value.
